Added main components and basic CSS to them. Added util formatDate which transform date to DD-MM-YYYY format. Added connection to back-end types. Bump version.

--- a/src/Components/common/Btn.css
+++ b/src/Components/common/Btn.css
@@ -1,4 +1,4 @@
-button {
+button, .btn {
     background-color: #0a0a23;
     color: #fff;
     border: none;
@@ -7,4 +7,6 @@ button {
     min-height: 30px;
     min-width: 120px;
     cursor: pointer;
+    text-decoration: none;
+    text-align: center;
 }
