Added some validation and unit choice. Added storing information about clicked item in local storage and alert. Bump version.

--- a/src/Components/common/Btn.css
+++ b/src/Components/common/Btn.css
@@ -10,3 +10,8 @@ button, .btn {
     text-decoration: none;
     text-align: center;
 }
+
+.disabled {
+    background-color: #8a8a8a;
+    cursor: default;
+}
