Added possibility of registration and login, added one context, some changes in style. Bump version.

--- a/src/Components/common/Btn.css
+++ b/src/Components/common/Btn.css
@@ -42,6 +42,8 @@ button:active, .btn:active {
 
 .home-btn {
     text-decoration: none;
+    padding-top: 3vh;
+    padding-left: 2vw;
 }
 
 .home-btn:hover {
