--- a/src/Components/layout/Header.css
+++ b/src/Components/layout/Header.css
@@ -8,22 +8,22 @@ header {
     letter-spacing: 0.2vh;
     font-size: 4vh;
     cursor: default;
-    margin-left: 8vw;
-}
-
-.my-lists-btn-span {
-    margin-top: 1.5vh;
-}
-
-.my-lists-btn-span:hover {
-    transform: scale(1.02);
-}
-
-.my-lists-btn-span:active {
-    transform: scale(0.95);
+    padding-top: 3vh;
+    padding-left: 2vw;
 }
 
 header .btn {
     padding: 12px;
 }
 
+.wrapper-btns {
+    display: flex;
+    flex-direction: column;
+    padding-right: 2vw;
+    margin-top: 1vh;
+}
+
+.logout {
+    width: 100%;
+    margin-top: 1.5vh;
+}
